fix: envars configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_BASE_URL=
+APP_BASE_URL=http://localhost:8030
 APP_SECRET_KEY=
-LIBSQL_CLIENT_URL=http://localhost:8080
+LIBSQL_CLIENT_URL=libsql://localhost:8080?tls=0
 LIBSQL_CLIENT_TOKEN=
