--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "esModuleInterop": true,
         "moduleResolution": "Node",
         "resolveJsonModule": true,
+        "strictNullChecks": true,
         "module": "ES2020",
         "target": "ES2020",
         "allowJs": true,
