--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,21 @@
         "jsx": "react-jsx",
         "jsxImportSource": "hono/jsx",
 
-        "lib": ["DOM", "DOM.Iterable", "ES2020"],
+        "lib": ["DOM", "DOM.Iterable", "ES2021"],
         "isolatedModules": true,
         "esModuleInterop": true,
         "moduleResolution": "Node",
         "resolveJsonModule": true,
         "strictNullChecks": true,
         "module": "ES2020",
-        "target": "ES2020",
+        "target": "ES2021",
         "allowJs": true,
         "forceConsistentCasingInFileNames": true,
 
         "noEmit": true,
         "sourceMap": true,
         "skipLibCheck": true,
-        // "incremental": true,
+        "incremental": true,
 
         "outDir": "dist",
         "baseUrl": ".",
