--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,12 @@ services:
     container_name: trusty_libsql
     hostname: libsql
     environment:
-      LIBSQLD_HTTP_LISTEN_ADDR: '0.0.0.0:8080'
+      SQLD_HTTP_LISTEN_ADDR: '0.0.0.0:8080'
+      SQLD_ADMIN_LISTEN_ADDR: '0.0.0.0:8081'
     ports:
       - 5001:5001
       - 8080:8080
+      - 8081:8081
     volumes:
       - libsql_data:/var/lib/sqld
 
