feat: mintlify docs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "build": "wireit",
         "dev": "tsx watch src/server.ts",
         "start": "node dist/server.cjs",
+        "docs:dev": "(cd docs && mintlify dev)",
+        "docs:check": "(cd docs && mintlify broken-links)",
         "db:migrate": "tsx src/migrate.ts",
         "db:rollback": "tsx src/migrate.ts rollback",
         "db:seed": "tsx src/migrate.ts seed",
@@ -60,6 +62,7 @@
         "@types/node": "^20.11.17",
         "esbuild": "^0.20.0",
         "husky": "^9.0.10",
+        "mintlify": "^4.0.125",
         "npm-check-updates": "^16.14.15",
         "rimraf": "^5.0.5",
         "tsx": "^4.7.1",
