--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "wireit",
         "dev": "tsx watch src/server.ts",
-        "start": "node dist/server.cjs",
+        "start": "node dist/server.mjs",
         "docs:dev": "(cd docs && mintlify dev)",
         "docs:check": "(cd docs && mintlify broken-links)",
         "db:migrate": "tsx src/migrate.ts",
@@ -45,13 +45,14 @@
         }
     },
     "dependencies": {
-        "@hono/node-server": "^1.7.0",
-        "@hono/valibot-validator": "^0.2.1",
-        "@libsql/client": "^0.4.3",
+        "@hono/node-server": "^1.8.0",
+        "@hono/valibot-validator": "^0.2.2",
+        "@libsql/client": "^0.5.0",
         "@libsql/kysely-libsql": "^0.3.0",
+        "arctic": "^1.1.6",
         "consola": "^3.2.3",
-        "dotenv": "^16.4.3",
-        "hono": "^4.0.1",
+        "dotenv": "^16.4.4",
+        "hono": "^4.0.3",
         "kysely": "^0.27.2",
         "oslo": "^1.1.1",
         "typeid-js": "^0.5.0",
@@ -59,9 +60,9 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^1.5.3",
-        "@types/node": "^20.11.17",
+        "@types/node": "^20.11.19",
         "esbuild": "^0.20.0",
-        "husky": "^9.0.10",
+        "husky": "^9.0.11",
         "mintlify": "^4.0.125",
         "npm-check-updates": "^16.14.15",
         "rimraf": "^5.0.5",
