--- a/biome.json
+++ b/biome.json
@@ -48,6 +48,6 @@
     "files": {
         "ignoreUnknown": true,
         "include": ["**/*.js", "**/*.ts", "**/*.css", "**/*.json"],
-        "ignore": [".github", ".husky", "node_modules", "dist"]
+        "ignore": [".husky", "node_modules", "dist", "public"]
     }
 }
