--- a/package.json
+++ b/package.json
@@ -33,14 +33,8 @@
     "wireit": {
         "build": {
             "command": "rimraf dist && node build.config.mjs",
-            "files": [
-                "src/**/*.{css,ts}",
-                "tsconfig.json"
-            ],
-            "output": [
-                "dist/**",
-                "static/**"
-            ],
+            "files": ["src/**/*.{css,ts}", "tsconfig.json"],
+            "output": ["dist/**", "static/**"],
             "clean": "if-file-deleted",
             "env": {
                 "NODE_ENV": {
@@ -59,6 +53,7 @@
         "consola": "^3.2.3",
         "dotenv": "^16.4.4",
         "hono": "^4.0.3",
+        "kysely-plugin-serialize": "^0.5.7",
         "kysely": "^0.27.2",
         "oslo": "^1.1.1",
         "typeid-js": "^0.5.0",
